--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -48,6 +48,22 @@
       padding-left: 28px;
     }
 
+    .opt_short {
+      display: none;
+    }
+    .opt_full {
+      display: inline;
+    }
+    
+    @media screen and (max-width: 800px) {
+      .opt_short {
+        display: inline;
+      }
+      .opt_full {
+        display: none;
+      }
+    }
+    
   </style>
 
 {% endblock %}
@@ -212,10 +228,16 @@
             <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}">
               {{ conexao.parceiro.user.get_full_name }}
               <span class="papeis">
-                {% for papel in conexao.get_papeis_completo %}[{{papel}}]{% endfor %}
+
+                {% for papel in conexao.get_papeis %}
+                  <span class="opt_full">[{{papel.0}}]</span>
+                  <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{papel.0}}">[{{papel.1}}]</span>
+                {% endfor %}
+                              
                 {% if conexao.observacao %}
                   &nbsp;&nbsp;obs: {{conexao.observacao}}
                 {% endif %}
+              
               </span>
             </a>
             <span class="emails"><a href="mailto:{{conexao.parceiro.user.email}}"> &lt;{{conexao.parceiro.user.email}}&gt;</a></span>
@@ -223,7 +245,10 @@
             <a class="imprimir" href="{% url 'parceiro_detail' conexao.parceiro.id %}" style="color: LightBlue;">
               {{ conexao.parceiro.user.get_full_name }}
               <span style="color: lightgrey;">
-              {% for papel in conexao.get_papeis_completo %}[{{papel}}]{% endfor %}
+              {% for papel in conexao.get_papeis %}
+                <span class="opt_full">[{{papel.0}}]</span>
+                <span class="opt_short" data-toggle="tooltip" data-html="true" animation="true" title="{{papel.0}}">[{{papel.1}}]</span>
+              {% endfor %}
               {% if conexao.observacao %}
                 &nbsp;&nbsp;obs: {{conexao.observacao}}
               {% endif %}
