--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -190,7 +190,7 @@
                 {% for aval, nota, peso, descr in alocado.get_notas %}
                   <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" 
                    title="{{descr}}">
-                    {{aval}}({% widthratio peso 1 100 %}%)={{nota|floatformat:1}}
+                    {{aval}}({{peso|floatformat:3}}%)={{nota|floatformat:1}}
                   </span>
                 {% endfor %}
                 &nbsp;|
